--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
     console:
       enabled: true
   jpa:
-    show-sql: true
+    show-sql: false
     ddl-auto: create
     properties:
       hibernate:
